2_services_route/homepage/homepage.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  namespace: homepage-nginx
  labels:
    app: homepage-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage-nginx
  template:
    metadata:
      labels:
        app: homepage-nginx
    spec:
      containers:
      - name: homepage-nginx
        image: gulcht/homepage-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: homepage-nginx
  name: homepage-svc
spec:
  selector:
    app: homepage-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
