2_services_route/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-nginx
  namespace: homepage-nginx
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: api-test.got.co.th 
      http:
          paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: homepage-svc
                port:
                  number: 80
